--- a/Modules/CMakePMCompiler.cmake.in
+++ b/Modules/CMakePMCompiler.cmake.in
@@ -32,4 +32,5 @@ set(CMAKE_PM_COMPILER_ENV_VAR "PM")
 
 set(CMAKE_PM_COMPILER_ID_RUN 1)
 set(CMAKE_PM_SOURCE_FILE_EXTENSIONS pm)
+set(CMAKE_PM_OUTPUT_EXTENSION_REPLACE 1)
 set(CMAKE_PM_IGNORE_EXTENSIONS ;o;aux;c)
